--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 Prototype_Yggdrasill/Temp/UnityLockfile
+Prototype_Yggdrasill/Assets/Video/Premessa.mp4
